# KV-cache-optimization

./: .gitignore  .gitlab-ci.yml  DIARY.md  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.mypy_cache/3.12/: AttentionHeads.data.json  AttentionHeads.meta.json  __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  (+231 more)
AttentionHeads/: .gitignore  ARCHITECTURE.md  README.md  TRAINING_RESULTS.md  pyproject.toml
AttentionHeads/DataEmbeddAnalyses/: pca_model.pkl
AttentionHeads/gqa/: README.md  __init__.py  attention.py  config_kv2.json  config_kv4.json  config_simplestories.json  transformer.py
AttentionHeads/mha/: MANIFEST.in  README.md  TECHNICAL_REPORT.md  __init__.py  attention.py  config.json  config_simplestories.json  data_loader.py  rope.py  setup.py  train.py  transformer.py  utils.py
AttentionHeads/mla/: __init__.py  attention.py  config.json  config_simplestories.json  transformer.py
AttentionHeads/models/: README.md
AttentionHeads/mqa/: README.md  __init__.py  attention.py  config.json  config_simplestories.json  transformer.py
AttentionHeads/notebooks/: analyse_tinystories_embeddings_pca.ipynb  compare_all_attention_mechanisms.ipynb  compare_mha_mqa_gqa.ipynb  compare_mha_mqa_models.ipynb  evaluate_attention_comparison.ipynb  text.txt  train_all_models.ipynb  train_all_simplestories.ipynb  train_gptneo_gqa2_tinystories.ipynb  train_gptneo_gqa4_tinystories.ipynb  train_gptneo_mla_tinystories.ipynb  train_gptneo_mqa_tinystories.ipynb  train_gptneo_tinystories.ipynb  train_transformer_v3_tinystories.ipynb
DataEmbeddAnalyses/: pca_analysis_config.json
docs/: DIARY.md  STRATIGRAPHIC.md  kv_bench_and_kv2state_guide.md
kv2state/: __init__.py  adaptive_cache.py  benchmark_adaptive.py  calibration.py  eval_perplexity.py  head_classifier.py  hybrid_attention.py  importance.py  state_attention.py  stratigraphic.py
kv_bench/: README.md  __init__.py  __main__.py  device_config.py  pyproject.toml  quant_sim.py  report.py  runner.py  strategy.py
kv_bench/notebooks/: 04-pareto-plot.ipynb  05-ablation-study.ipynb  06-turboquant-comparison.ipynb
kv_bench/strategies/: __init__.py  adaptive_tiered.py  baseline.py  h2o.py  hybrid.py  hybrid_tq.py  kv2state.py  snapkv.py  stratigraphic.py  streaming_attention.py  turboquant.py  uniform_quant.py
streaming_attention/: __init__.py  adaptive_cache.py  benchmark_adaptive.py  calibration.py  eval_perplexity.py  head_classifier.py  hybrid_attention.py  pyproject.toml  state_attention.py  stratigraphic.py  turboquant.py
streaming_attention/configs/: llama31_8b.json
streaming_attention/notebooks/: 01_zero_shot_test.ipynb  02_calibration.ipynb  03-kv-bench-modal.ipynb  04-memory-crossover.ipynb
tests/: conftest.py  test_attention_shapes.py  test_config_validation.py  test_quant_sim.py  test_rope.py  test_state_attention.py  test_strategies.py  test_stratigraphic.py
(+738 files in other folders)
