[project]
name = "kv_bench"
version = "0.1.0"
description = "Benchmarking framework for KV cache compression strategies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0,<2.3.0",
    "transformers>=4.40.0,<5.0",
    "datasets>=2.16.0",
    "numpy>=1.24.0,<2.0",
    "tqdm>=4.60.0",
    "streaming_attention",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7.0", "seaborn>=0.12.0"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "kv_bench",
    "kv_bench.strategies",
]
package-dir = {"kv_bench" = ".", "kv_bench.strategies" = "strategies"}
